; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_listcomp.c_golomb_encoder_init.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_listcomp.c_golomb_encoder_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.list_encoder = type { i32, i32, i32, i32, i32*, i32, i32 }

@golomb_encode_int = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.list_encoder*)* @golomb_encoder_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @golomb_encoder_init(%struct.list_encoder* %0) #0 {
  %2 = alloca %struct.list_encoder*, align 8
  %3 = alloca i32, align 4
  store %struct.list_encoder* %0, %struct.list_encoder** %2, align 8
  %4 = load %struct.list_encoder*, %struct.list_encoder** %2, align 8
  %5 = getelementptr inbounds %struct.list_encoder, %struct.list_encoder* %4, i32 0, i32 6
  %6 = load i32, i32* %5, align 4
  %7 = load %struct.list_encoder*, %struct.list_encoder** %2, align 8
  %8 = getelementptr inbounds %struct.list_encoder, %struct.list_encoder* %7, i32 0, i32 5
  %9 = load i32, i32* %8, align 8
  %10 = call i32 @compute_golomb_parameter(i32 %6, i32 %9)
  store i32 %10, i32* %3, align 4
  %11 = load %struct.list_encoder*, %struct.list_encoder** %2, align 8
  %12 = getelementptr inbounds %struct.list_encoder, %struct.list_encoder* %11, i32 0, i32 0
  store i32 31, i32* %12, align 8
  %13 = load %struct.list_encoder*, %struct.list_encoder** %2, align 8
  %14 = getelementptr inbounds %struct.list_encoder, %struct.list_encoder* %13, i32 0, i32 1
  store i32 1, i32* %14, align 4
  br label %15

15:                                               ; preds = %21, %1
  %16 = load %struct.list_encoder*, %struct.list_encoder** %2, align 8
  %17 = getelementptr inbounds %struct.list_encoder, %struct.list_encoder* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %3, align 4
  %20 = icmp sle i32 %18, %19
  br i1 %20, label %21, label %30

21:                                               ; preds = %15
  %22 = load %struct.list_encoder*, %struct.list_encoder** %2, align 8
  %23 = getelementptr inbounds %struct.list_encoder, %struct.list_encoder* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = mul nsw i32 %24, 2
  store i32 %25, i32* %23, align 4
  %26 = load %struct.list_encoder*, %struct.list_encoder** %2, align 8
  %27 = getelementptr inbounds %struct.list_encoder, %struct.list_encoder* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 8
  %29 = add nsw i32 %28, -1
  store i32 %29, i32* %27, align 8
  br label %15

30:                                               ; preds = %15
  %31 = load i32, i32* %3, align 4
  %32 = load %struct.list_encoder*, %struct.list_encoder** %2, align 8
  %33 = getelementptr inbounds %struct.list_encoder, %struct.list_encoder* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = sub nsw i32 %34, %31
  store i32 %35, i32* %33, align 4
  %36 = load i32, i32* %3, align 4
  %37 = load %struct.list_encoder*, %struct.list_encoder** %2, align 8
  %38 = getelementptr inbounds %struct.list_encoder, %struct.list_encoder* %37, i32 0, i32 2
  store i32 %36, i32* %38, align 8
  %39 = load %struct.list_encoder*, %struct.list_encoder** %2, align 8
  %40 = getelementptr inbounds %struct.list_encoder, %struct.list_encoder* %39, i32 0, i32 3
  store i32 -1, i32* %40, align 4
  %41 = load %struct.list_encoder*, %struct.list_encoder** %2, align 8
  %42 = getelementptr inbounds %struct.list_encoder, %struct.list_encoder* %41, i32 0, i32 4
  store i32* @golomb_encode_int, i32** %42, align 8
  ret void
}

declare dso_local i32 @compute_golomb_parameter(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
